# QtCore_Notes

./: .gitignore  README.md
0_HelloWorld/: CMakeLists.txt  main.cpp
1_MemoryManagement/: CMakeLists.txt  destination.cpp  destination.h  main.cpp  source.cpp  source.h  test.cpp  test.h
2_Property_Example/: CMakeLists.txt  main.cpp  test.cpp  test.h
3_Radio/: CMakeLists.txt  main.cpp  radio.cpp  radio.h  station.cpp  station.h
4_Settings/: CMakeLists.txt  main.cpp
5_QFileSystems/: CMakeLists.txt  DataStream.h  DirExample.h  IODevice.h  LockFile.h  TextStream.h  main.cpp
6_Debug/: CMakeLists.txt  Lecture0.cpp  logger.cpp  logger.h  main.cpp  test.cpp  test.h
7_Encoding/: CMakeLists.txt  main.cpp
8_Compression/: CMakeLists.txt  main.cpp
